# vrcp

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  README.md  app.config.ts  eas.json  env.d.ts  makefile  openapitools.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: desktop-build.yml  mobile-build.yml  pages-deploy.yml
api/vrchat/: api.ts  base.ts  common.ts  configuration.ts  index.ts
app/: _layout.tsx  index.tsx
app/maintab/: _layout.tsx  favorites.tsx  friends.tsx  home.tsx  profile.tsx  resources.tsx  settings.tsx
app/other/: _layout.tsx  search.tsx
assets/dummy/: get-group-by-id.json  get-user-by-id.json  get-world-by-id.json
components/: BackButtonForHeader.tsx  GenericDialog.tsx  GenericModal.tsx  GenericScreen.tsx  LoadingIndicator.tsx  SearchBox.tsx  SelectGroupButton.tsx
components/chip-badge/: LinkChip.tsx  PlatformChips.tsx  RegionBadge.tsx  ReleaseStatusChip.tsx  TagChips.tsx
components/detailpage-components/: DetailItemContainer.tsx
components/icon-components/: IconButton.tsx  IconView.tsx  utils.ts
components/item-CardView/: BaseCardView.tsx  CardViewAvatar.tsx  CardViewGroup.tsx  CardViewUser.tsx  CardViewWorld.tsx
components/item-ListView/: BaseListView.tsx  ListViewInstance.tsx  ListViewUser.tsx
config/: styles.ts  texts.ts
config/langs/: en-us.ts  ja-jp.ts
contexts/: AuthContext.tsx  DataCacheContext.tsx  ImageCacheContext.tsx  VRChatContext.tsx  __DataContext.tsx
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: 2  Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/modules/: db.rs  mod.rs  server.rs  systray.rs  watcher.rs
lib/: color.ts  date.ts  error.ts  extractErrMsg.ts  objectUtils.ts  route.ts  vrchatUtils.ts
mobile/: README.md  app.config.ts  package-lock.json  package.json  versions.json
modules/expo-native-ws/: .gitignore  expo-module.config.json  index.ts
pages/: astro.config.mjs  package-lock.json  package.json
src/app/: _layout.tsx  index.tsx  tmp.tsx
src/assets/: licenses.json
src/components/: CustomElements.tsx
src/config/: styles.ts
src/configs/: i18n.ts  styles.ts  texts.ts  theme.ts
src/contexts/: ApiCacheContext.tsx  AuthContext.tsx  CacheContext.tsx  DBContext.tsx  DataContext.tsx  ImageCacheContext.tsx  SettingContext.tsx  VRChatContext.tsx
src/db/: migration.ts
src/lib/: date.ts  vrchatUtils.ts
(+426 files in other folders)
