[package]
name = "vrcp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vrcp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8.35"
regex = "1.12.2"
dirs = "6.0.0"
specta = { version = "2.0.0-rc", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["full"] }

